--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "moment": "^2.24.0",
     "mqtt": "^3.0.0",
     "mqtt-react": "^0.0.3",
